# norg.py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  todo.norg
src/: __main__.py  lexer.py  parser.py
src/norg/: document_structure.py  norg.pg  norg.pgt  parser.py  quick_test_runner.py
src/norg/abstract/: actions.py
src/norg/grammar/: grammar.py
src/test/: test_at.py  test_heading.py
